--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -98,7 +98,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['/admin/settings']"
+            [routerLink]="['/admin/school']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminSettings="routerLinkActive"
@@ -120,7 +120,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['/admin/tables']"
+            [routerLink]="['/admin/exams']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminTables="routerLinkActive"
@@ -142,7 +142,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['/admin/maps']"
+            [routerLink]="['/admin/papers']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminMaps="routerLinkActive"
@@ -166,7 +166,7 @@
       <ul class="md:flex-col md:min-w-full flex flex-col list-none md:mb-4">
         <li class="items-center">
           <a
-            [routerLink]="['/auth/login']"
+            [routerLink]="['/admin/faculty']"
             class="text-blueGray-700 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
           >
             <i class="fas fa-fingerprint text-blueGray-300 mr-2 text-sm"></i>
@@ -176,7 +176,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['/auth/register']"
+            [routerLink]="['/admin/domain']"
             class="text-blueGray-700 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
           >
             <i class="fas fa-clipboard-list text-blueGray-300 mr-2 text-sm"></i>
@@ -188,7 +188,7 @@
       <ul class="md:flex-col md:min-w-full flex flex-col list-none md:mb-4">
         <li class="items-center">
           <a
-            [routerLink]="['/landing']"
+            [routerLink]="['/admin/subject']"
             class="text-blueGray-700 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
           >
             <i class="fas fa-newspaper text-blueGray-300 mr-2 text-sm"></i>
@@ -198,7 +198,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['/profile']"
+            [routerLink]="['/admin/session']"
             class="text-blueGray-700 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
           >
             <i class="fas fa-user-circle text-blueGray-300 mr-2 text-sm"></i>
@@ -208,7 +208,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['/profile']"
+            [routerLink]="['/admin/correction']"
             class="text-blueGray-700 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
           >
             <i class="fas fa-user-circle text-blueGray-300 mr-2 text-sm"></i>
