--- a/src/app/views/admin/correction/correction.component.html
+++ b/src/app/views/admin/correction/correction.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap mt-4">
   <div class="w-full mb-12 px-4">
-    <app-tab-correction></app-tab-correction>>
+    <app-tab-correction></app-tab-correction>
   </div>
 </div>
