Interface almost ready

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -100,7 +100,7 @@
             "
           >
             <i
-              class="fas fa-tools mr-2 text-sm"
+              class="fas fa-solid fa-school mr-2 text-sm"
               [ngClass]="
                 adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -122,7 +122,7 @@
             "
           >
             <i
-              class="fas fa-table mr-2 text-sm"
+              class="fas fa-clipboard-list mr-2 text-sm"
               [ngClass]="
                 adminTables.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -144,7 +144,7 @@
             "
           >
             <i
-              class="fas fa-map-marked mr-2 text-sm"
+              class="fas fa-solid fa-scroll mr-2 text-sm"
               [ngClass]="
                 adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -166,7 +166,7 @@
             "
           >
             <i
-              class="fas fa-map-marked mr-2 text-sm"
+              class="fas fa-university mr-2 text-sm"
               [ngClass]="
               adminfac.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -188,7 +188,7 @@
             "
           >
             <i
-              class="fas fa-map-marked mr-2 text-sm"
+              class="fas fa-chalkboard-teacher mr-2 text-sm"
               [ngClass]="
               admindom.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -210,7 +210,7 @@
             "
           >
             <i
-              class="fas fa-map-marked mr-2 text-sm"
+              class="fas fa-book-open mr-2 text-sm"
               [ngClass]="
               adminsub.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -232,7 +232,7 @@
             "
           >
             <i
-              class="fas fa-map-marked mr-2 text-sm"
+              class="fas fa-calendar-alt mr-2 text-sm"
               [ngClass]="
               adminsess.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -254,7 +254,7 @@
             "
           >
             <i
-              class="fas fa-map-marked mr-2 text-sm"
+              class="fas fa-clipboard-check mr-2 text-sm"
               [ngClass]="
               admincor.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
