--- a/src/app/components/tables/tab-exams/tab-exams.component.html
+++ b/src/app/components/tables/tab-exams/tab-exams.component.html
@@ -52,6 +52,15 @@
           <td
           id="dropdownDefault" data-dropdown-toggle="dropdown" class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
           >
+          <button><i class="fas fa-ellipsis-v"  (click)="toggledrop1(5)"></i></button>
+          <div *ngIf="showdrop5" class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+            <div class="py-1" role="none">
+              <!-- repeat this for all faculties -->
+              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">edit</a>
+              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">delete</a>
+              <!--*******************************-->
+            </div>
+            </div>
           </td>
         </tr>
       </tbody>
@@ -88,13 +97,13 @@
       <form action="">
       <div class="relative p-5 flex-wrap">
         <label for="name" class="text-gray-800 text-sm font-bold leading-tight tracking-normal">Name :</label>
-        <input id="name" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" placeholder="James" required/>
+        <input id="name" type="text" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" required/>
 
-        <label for="phone" class="text-gray-800 text-sm font-bold leading-tight tracking-normal">Level :</label>
-        <input id="phone" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" placeholder="658171712" required/>
+        <label for="level" class="text-gray-800 text-sm font-bold leading-tight tracking-normal">Level :</label>
+        <input id="level" type="text" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" placeholder="L1" required/>
 
-        <label for="facebook" class="text-gray-800 text-sm font-bold leading-tight tracking-normal">Number of Subjects :</label>
-        <input id="facebook" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" placeholder="myprepa" required/>
+        <label for="nbr" class="text-gray-800 text-sm font-bold leading-tight tracking-normal">Number of Subjects :</label>
+        <input id="nbr" type="number" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" placeholder="5" required/>
       </div>
       <div>
 
@@ -151,7 +160,7 @@
          </button>
         </div>
 
-      <div *ngIf="showdrop3" class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+      <div *ngIf="showdrop3" class="absolute right-20 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
         <div class="py-1" role="none">
           <!-- repeat this for all faculties -->
           <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Account settings</a>
