--- a/src/app/views/admin/papers/papers.component.html
+++ b/src/app/views/admin/papers/papers.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap mt-4">
   <div class="w-full mb-12 px-4">
-    <app-tab-papers></app-tab-papers>>
+    <app-tab-papers></app-tab-papers>
   </div>
 </div>
