--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -100,7 +100,7 @@
             "
           >
             <i
-              class="fas fa-solid fa-scroll mr-2 text-sm"
+              class="fas fa-solid fa-user mr-2 text-sm"
               [ngClass]="
                 adminuser.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -254,7 +254,7 @@
             "
           >
             <i
-              class="fas fa-solid fa-scroll mr-2 text-sm"
+              class="fas fa-solid fa-clipboard mr-2 text-sm"
               [ngClass]="
                 adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
